{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 60,
  "lineage": "37f37a37-fc70-546e-e797-ad89198cbbda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonarQubeServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:192523512621:instance/i-0c3077fe3159afcc0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3077fe3159afcc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ff686354099a1c4",
            "private_dns": "ip-172-20-10-202.ap-south-1.compute.internal",
            "private_ip": "172.20.10.202",
            "public_ip": "13.127.219.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b935ae65428252c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a51567051f7f59",
            "tags": {
              "Name": "SonarQubeServer"
            },
            "tags_all": {
              "Name": "SonarQubeServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3dc08ef208f6433"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-sg",
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:192523512621:instance/i-0c2dca1d8f74fa9ff",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2dca1d8f74fa9ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017b2a355b38e4151",
            "private_dns": "ip-172-20-10-207.ap-south-1.compute.internal",
            "private_ip": "172.20.10.207",
            "public_ip": "13.127.85.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03aa0348e97495cdf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a51567051f7f59",
            "tags": {
              "Name": "ansible-controller"
            },
            "tags_all": {
              "Name": "ansible-controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3dc08ef208f6433"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-sg",
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-managed-node-docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:192523512621:instance/i-0483329d1491f48c0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0483329d1491f48c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c617920c961ccd8",
            "private_dns": "ip-172-20-10-237.ap-south-1.compute.internal",
            "private_ip": "172.20.10.237",
            "public_ip": "35.154.235.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0335ec56c496be16a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a51567051f7f59",
            "tags": {
              "Name": "ansible-managed-node-docker"
            },
            "tags_all": {
              "Name": "ansible-managed-node-docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3dc08ef208f6433"
            ]
          },
          "dependencies": [
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc",
            "aws_security_group.lab-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-managed-node-tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:192523512621:instance/i-033b302ce42fa8cef",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033b302ce42fa8cef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd1b94a1f35aea75",
            "private_dns": "ip-172-20-10-242.ap-south-1.compute.internal",
            "private_ip": "172.20.10.242",
            "public_ip": "35.154.215.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d77c41121a185afc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a51567051f7f59",
            "tags": {
              "Name": "ansible-managed-node-tomcat"
            },
            "tags_all": {
              "Name": "ansible-managed-node-tomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3dc08ef208f6433"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-sg",
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:192523512621:instance/i-0d40f1f7e9fdb3469",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d40f1f7e9fdb3469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ce66f094af5712c",
            "private_dns": "ip-172-20-10-49.ap-south-1.compute.internal",
            "private_ip": "172.20.10.49",
            "public_ip": "13.233.238.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a51a3697c03a60a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a51567051f7f59",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3dc08ef208f6433"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-sg",
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:192523512621:instance/i-0095b539fc2be3c18",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0095b539fc2be3c18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa5e6f0f70b647aa",
            "private_dns": "ip-172-20-10-13.ap-south-1.compute.internal",
            "private_ip": "172.20.10.13",
            "public_ip": "13.234.119.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ebf6179a893e7ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a51567051f7f59",
            "tags": {
              "Name": "nexus"
            },
            "tags_all": {
              "Name": "nexus"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3dc08ef208f6433"
            ]
          },
          "dependencies": [
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc",
            "aws_security_group.lab-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:192523512621:internet-gateway/igw-0c9f5ea602803df9c",
            "id": "igw-0c9f5ea602803df9c",
            "owner_id": "192523512621",
            "tags": {
              "Name": "lab-igw"
            },
            "tags_all": {
              "Name": "lab-igw"
            },
            "vpc_id": "vpc-04def74616930e082"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:192523512621:route-table/rtb-045dd311ad385d3f1",
            "id": "rtb-045dd311ad385d3f1",
            "owner_id": "192523512621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9f5ea602803df9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-rt"
            },
            "tags_all": {
              "Name": "lab-rt"
            },
            "vpc_id": "vpc-04def74616930e082"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab-igw",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce449068c8187127",
            "route_table_id": "rtb-045dd311ad385d3f1",
            "subnet_id": "subnet-0c6a51567051f7f59"
          },
          "dependencies": [
            "aws_internet_gateway.lab-igw",
            "aws_route_table.lab-rt",
            "aws_subnet.lab-subnet1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:192523512621:security-group/sg-0c3dc08ef208f6433",
            "description": "To allow inbound and outbound traffic to mylab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3dc08ef208f6433",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Lab Security Group",
            "name_prefix": "",
            "owner_id": "192523512621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-sg"
            },
            "tags_all": {
              "Name": "lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04def74616930e082"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:192523512621:subnet/subnet-0c6a51567051f7f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0c6a51567051f7f59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192523512621",
            "tags": {
              "Name": "lab-subnet1"
            },
            "tags_all": {
              "Name": "lab-subnet1"
            },
            "vpc_id": "vpc-04def74616930e082"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:192523512621:vpc/vpc-04def74616930e082",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-011898d7b3d849114",
            "default_route_table_id": "rtb-00099c206d556c122",
            "default_security_group_id": "sg-0531d0c33a0ce9e53",
            "dhcp_options_id": "dopt-22baa94a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04def74616930e082",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00099c206d556c122",
            "owner_id": "192523512621",
            "tags": {
              "Name": "lab-vpc"
            },
            "tags_all": {
              "Name": "lab-vpc"
            }
          }
        }
      ]
    }
  ]
}